新功能：消息机制升级第 3 批 — 断流重订阅与流式中断
让用户能在断线/刷新后无缝续看正在生成的对话，并能主动中断 Claude 当前
turn 而不杀子进程，进程下一轮可直接复用，避免 --resume 重建上下文。

服务端流式基础设施：
- 新增 CancellableStream（Sinks.replay(256) 桥接 + 可重订阅 + 幂等
  cancel，向下游注入 interrupted 事件并 dispose 上游）。
- 新增 ActiveStreamRegistry（sessionCode → Flux+cancelAction，让控制器
  能挂回正在进行的流并触发中断）。
- 新增 SseKeepAlive（15s 周期 :keepalive 注释行，规避反代 idle 断连）。

Provider 中断能力：
- MessagesAgent SPI 增 default cancelStream(sessionCode) 方法。
- ClaudeCodeProcess 增 interruptActiveTurn：通过 stream-json
  control_request 让 CLI 自身 abort 当前思考与工具调用，进程保活。
- ChatSessionRegistry 增 interruptActiveTurn(sessionCode) 入口。
- ClaudeCodeMessagesAgent 实现 cancelStream，串接到 ChatSessionRegistry。

事件投影升级：
- StreamJsonToMessagesEventMapper 在每个 turn 前注入 turn_start、末尾
  注入 turn_stop；新增对 task 模式 assistant 整块的投影（拆为
  content_block_start/delta/stop 三联，让 recorder 能落 TEXT/THINKING/
  TOOL_USE）；新增对 user 内 tool_result 块的投影（tool_result 伪事件）。

应用服务重写：
- AnthropicMessagesService 去掉 assistant placeholder + completeMessage
  生命周期，改为生成 turnCode、由 recorder 实时按 block 落库；流式
  路径用 CancellableStream + ActiveStreamRegistry 包装并 SseKeepAlive
  心跳；非流式路径在 events 收齐后从 message_start/delta/stop 重建
  Anthropic message JSON。
- 删除不再使用的 AnthropicMessageAssembler 及其测试。

相关测试同步更新，覆盖事件计数、turn 边界、payload 解析。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>